--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "body-parser": "^1.20.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "concurrently": "^7.6.0",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.6",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -18,11 +24,20 @@
     "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "request": "^2.88.2",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
+    "twitter": "^1.7.1",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "development": "NODE_ENV=development concurrently --kill-others \"npm run client\" \"npm run server\"",
+    "production": "npm run build && NODE_ENV=production npm run server",
+    "client": "react-scripts start",
+    "server": "node server/server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
