--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CLIENT_ID=your_client_id
-REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
-REACT_APP_REDIRECT_URL=http://localhost:3000/redirect
-TWITTER_BEARER_TOKEN=<YOUR BEARER TOKEN HERE>
+TWITTER_API_KEY=3BIvglMa3QdoQYTf88aePx6M8
+TWITTER_API_SECRET=Qu2painFz8DtlL7ou9FQvr98XFwqh9JPhHd9nsyTbwSv1D7NpR
+TWITTER_ACCESS_TOKEN=http://localhost:3000/redirect
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAIEVjwEAAAAAwk1Gj%2FzlTgDFJGFqzbzknyH3TbA%3DR4c8DVqtxhGUwakpYmtUscfUoYUEIHEW3CVcgtOfCSDHKnEozr
