--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
@@ -28,8 +29,14 @@
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "twitter": "^1.7.1",
+    "twitter-api-client": "^1.6.1",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,5 +65,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9"
   }
+  
 }
