--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
+    "needle": "^3.2.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -69,5 +72,4 @@
   "devDependencies": {
     "@types/node": "^18.11.9"
   }
-  
 }
